--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/xplaino-purple-icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Xplaino | AI Research Assistant & Webpage Summarizer</title>
-    <meta name="description" content="Summarize webpages, translate content, simplify complex text, and save organized insights with Xplaino AI." />
-    <meta name="keywords" content="AI research assistant, webpage summarizer, website translator, simplify complex text, organize web research, AI learning tool" />
+    <title>Xplaino | Turn Every Webpage into Structured Knowledge</title>
+    <meta name="description" content="Turn every webpage into structured knowledge. Xplaino AI is your Web Research & Second Brain — summarize articles, translate in 50+ languages, and organize insights while you browse." />
+    <meta name="keywords" content="AI research assistant, AI webpage summarizer, research paper summarizer, AI translator extension, website translator Chrome extension, knowledge dashboard, second brain for web, structured learning, context-aware AI assistant, AI study tool" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Xplaino | AI Research Assistant & Webpage Summarizer" />
-    <meta property="og:description" content="Summarize webpages, translate content, simplify complex text, and save organized insights with Xplaino AI." />
+    <meta property="og:title" content="Xplaino | Turn Every Webpage into Structured Knowledge" />
+    <meta property="og:description" content="Turn every webpage into structured knowledge. Xplaino AI is your Web Research & Second Brain — summarize articles, translate in 50+ languages, and organize insights while you browse." />
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:title" content="Xplaino | AI Research Assistant & Webpage Summarizer" />
-    <meta property="twitter:description" content="Summarize webpages, translate content, simplify complex text, and save organized insights with Xplaino AI." />
+    <meta property="twitter:title" content="Xplaino | Turn Every Webpage into Structured Knowledge" />
+    <meta property="twitter:description" content="Turn every webpage into structured knowledge. Xplaino AI is your Web Research & Second Brain — summarize articles, translate in 50+ languages, and organize insights while you browse." />
   </head>
   <body>
     <div id="root"></div>
