--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/xplaino-purple-icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Xplaino | Turn Every Webpage into Structured Knowledge</title>
+    <title>Xplaino – AI Webpage Summarizer, Translator & Research Assistant</title>
     <meta name="description" content="Turn every webpage into structured knowledge. Xplaino AI is your Web Research & Second Brain — summarize articles, translate in 50+ languages, and organize insights while you browse." />
     <meta name="keywords" content="AI research assistant, AI webpage summarizer, research paper summarizer, AI translator extension, website translator Chrome extension, knowledge dashboard, second brain for web, structured learning, context-aware AI assistant, AI study tool" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Xplaino | Turn Every Webpage into Structured Knowledge" />
+    <meta property="og:title" content="Xplaino – AI Webpage Summarizer, Translator & Research Assistant" />
     <meta property="og:description" content="Turn every webpage into structured knowledge. Xplaino AI is your Web Research & Second Brain — summarize articles, translate in 50+ languages, and organize insights while you browse." />
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:title" content="Xplaino | Turn Every Webpage into Structured Knowledge" />
+    <meta property="twitter:title" content="Xplaino – AI Webpage Summarizer, Translator & Research Assistant" />
     <meta property="twitter:description" content="Turn every webpage into structured knowledge. Xplaino AI is your Web Research & Second Brain — summarize articles, translate in 50+ languages, and organize insights while you browse." />
   </head>
   <body>
